--- a/public/asset/css/contact.css
+++ b/public/asset/css/contact.css
@@ -23,7 +23,7 @@ body {
 
 /* Container 2 phần: thông tin + form */
 .contact-container {
-  width: 900px;
+  width: 1100px;
   display: flex;
   gap: 30px;
   align-items: flex-start;
@@ -86,16 +86,16 @@ body {
 
 /* Ảnh minh họa */
 .contact-image {
-  position: fixed;   /* ảnh dính góc phải dưới */
-  right: 200px;
-  bottom: 50px;
-  z-index: 0;
+  position: absolute;   /* ảnh dính góc phải dưới */
+  right: -40px;
+  bottom: -50px;
+  z-index: -1;
   opacity: 0.95;
   pointer-events: none; /* tránh che form */
 }
 
 .contact-image img {
-  max-width: 700px;
+  max-width: 500px;
   height: auto;
 }
 
